# argo-workflows-openapi

./: Cargo.toml  README.md
.github/: CODEOWNERS
.github/workflows/: ci.yaml
src/: lib.rs
src/v3/: mod.rs
src/v3/v3_5/pkg/: mod.rs
src/v3_5/v3/pkg/apiclient/: mod.rs
src/v3_5/v3/pkg/apiclient/config/: host.rs  mod.rs
src/v3_5/v3/pkg/apiclient/info/: mod.rs
src/v3_5/v3/pkg/apis/workflow/v1alpha1/: archive_strategy.rs  arguments.rs  art_gc_status.rs  artifact.rs  artifact_gc.rs  artifact_gc_spec.rs  artifact_location.rs  artifact_node_spec.rs  artifact_paths.rs  artifact_repository.rs  artifact_repository_ref.rs  artifact_repository_ref_status.rs  artifactory_artifact.rs  artifactory_artifact_repository.rs  azure_artifact.rs  azure_artifact_repository.rs  backoff.rs  basic_auth.rs  cache.rs  client_cert_auth.rs  column.rs  condition.rs  container_node.rs  container_set_retry_strategy.rs  container_set_template.rs  continue_on.rs  counter.rs  create_s3_bucket_options.rs  dag_task.rs  dag_template.rs  data.rs  data_source.rs  executor_config.rs  gauge.rs  gcs_artifact.rs  gcs_artifact_repository.rs  git_artifact.rs  hdfs_artifact.rs  hdfs_artifact_repository.rs  header.rs  (+61 more)
