[package]
name = "argo-workflows-openapi"
version = "0.1.0"
license = "Apache-2.0"
authors = ["Gaurav Gahlot<me@gauravgahlot.in>"]
categories = ["api-bindings", "kubernetes", "argo-workflows"]
description = "Bindings for the Argo Workflows client API"
documentation = "https://github.io/gauravgahlot/argo-workflows-openapi"
edition = "2021"
keywords = ["client", "kubernetes", "k8s", "openapi", "argo", "workflows"]
readme = "README.md"
repository = "https://github.io/gauravgahlot/argo-workflows-openapi"
include = [    
    "Cargo.toml",
    "LICENSE",
    "README.md",
    "src/**/*",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
