[package]
name = "argo-workflows-openapi"
version = "0.1.0"
license = "Apache-2.0"
authors = ["Gaurav Gahlot<me@gauravgahlot.in>"]
categories = ["api-bindings", "kubernetes", "argo-workflows"]
description = "Bindings for the Argo Workflows client API"
documentation = "https://github.io/gauravgahlot/argo-workflows-openapi"
edition = "2021"
keywords = ["client", "kubernetes", "k8s", "openapi", "argo", "workflows"]
readme = "README.md"
repository = "https://github.io/gauravgahlot/argo-workflows-openapi"
include = [    
    "Cargo.toml",
    "LICENSE",
    "README.md",
    "src/**/*",
]

[dependencies]
k8s-openapi = { version = "0.20.0", features = ["v1_27"] }
reqwest = { version = "0.11.23", features = ["blocking"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"

[features]
v3_5 = []
latest = ["v3_5"]
default = ["latest"]

[package.metadata.docs.rs]
features = ["latest"]
